# Tablero_Lavadora

./: CMakelists.txt  Logica.c  README.md  Tablero.c  bb.c  tablero.c
C/: CMakelists.txt  README.md  pico_sdk_import.cmake
C/Tablero/: CMakeLists.txt  Leds.c  Leds.h  main.c  pin_list_display.h  temporizador.c  temporizador.h
C/Teclado/: pin_list_keypad.h
C/Temporizador/: CMakeLists.txt
C/logica/: CMakelists.txt  temporizador.h
Carga/: CMakeLists.txt  carga.c  carga.h
Centrifugar/: CMakeLists.txt  CMakelists.txt  Centrifugar.c  Centrifugar.h  centrifugar.c
Codigó_C/Leds/: Leds.c  Leds.h
Codigó_Py/: ejemplo_ejercicio2_YT.py  ejemplo_un_beep.py  main.py  sonidos_zumbador.py
Display/: CMakeLists.txt  display.c
Encendido_Apagado/: CMakeLists.txt  Encender_Apagar.h  Encender_apagar.c
Enjuagar/: CMakelists.txt  Enjuagar.c  Enjuagar.h
Lavar/: CMakelists.txt  Lavar.c  Lavar.h
Leds/: Leds.c  Leds.h  pin_list_leds.h
Pausa_Play/: CMakelists.txt  Pausa_Play.h  Pausa_play.c  Pausa_play.h
Python/: Blynk.py  BlynkLib.py  fsm.py  fsm_actions.py  main.py  sensor_temperatura.py  shared_obj.py  sonidos_zumbador.py
Python/sensoresLavadora/: main_nivel_agua.py  main_temperatura.py  sensor_nivel_agua.py  sensor_temperatura.py
Tablero/: CMakelists.txt  Tablero.c
Teclado/: CmakeLists.txt  Teclado.c  Teclado.h
Temoperatura/: CMakelists.txt  Temperatura.c
Temporizador/: CMakeLists.txt  pin_list.h  pin_list_display.h  temporizador.c  temporizador.h  test.c
Test/: CMakeLists.txt  Test.c
TipoDeLavado/: CMakeLists.txt  Tipo_lavado.c  Tipo_lavado.h
botones_temperatura/: boton_temperatura.c  boton_temperatura.h  botones_temperatura.c  botones_temperatura.h
carga_ropa/: CMakeLists.txt  README.md  carga.c  carga.h
centrifugado/: centrifugado.c  centrifugado.h
display_lavadora/: display.c
lavadora/: Tablero.c  main.c
logica/: CMakelists.txt  Logica.c  README  README.md
sensoresLavadora/: main_temperatura.py  sensor_nivel_agua.py  sensor_temperatura.py
wifi/: BlynkLib.py  blynk.py  main.py  shared_object.py
